Bug 341380 - Vertical scroll does not work with desktop folder
Summary: Vertical scroll does not work with desktop folder
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Folder (show other bugs)
Version: 5.1.1
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-11-28 21:22 UTC by illumilore
Modified: 2014-12-06 00:33 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description illumilore 2014-11-28 21:22:34 UTC
With the layout of the desktop set to folder, in folder settings> mouse actions, when a vertical scroll action is created, using vertical scroll on the desktop never works for any of the actions.

Reproducible: Always
Comment 1 Eike Hein 2014-11-29 14:52:30 UTC
This is because Folder View handles the wheel event itself, which it may need to because there can be more icons than fit, so the view can be scrolled. Perhaps we could hand through the events if the view is not actually overflowing, though. Marco, thoughts/opinion?
Comment 2 illumilore 2014-11-29 20:48:24 UTC
"Perhaps we could hand through the events if the view is not actually overflowing, though. "

I think that would be how it used to behave in the older 4.x versions. If it ran out of room due to something like a resolution change it would start scrolling instead.
Comment 3 Eike Hein 2014-12-02 19:37:37 UTC
Git commit c69657abdb6e21313d4b1387aa1847dc4c75d709 by Eike Hein.
Committed on 02/12/2014 at 19:33.
Pushed by hein into branch 'master'.

Containment: Redirect wheel events to ContainmentInterface when view is not overflowing.

This makes the wheel scroll Mouse Actions trigger work on Folder.

ScrollView's internal implementation is very greedy for wheel
events (to the point of overriding Flickable completely and making
them unfilterable) irregardless of viewport size, so we hijack
events before they reach it if we know we're not going to need
them there.

M  +1    -0    containments/folder/CMakeLists.txt
M  +11   -1    containments/folder/package/contents/ui/ItemView.qml
M  +2    -0    containments/folder/plugin/folderplugin.cpp
A  +51   -0    containments/folder/plugin/wheelinterceptor.cpp     [License: GPL (v2+)]
A  +49   -0    containments/folder/plugin/wheelinterceptor.h     [License: GPL (v2+)]

http://commits.kde.org/plasma-desktop/c69657abdb6e21313d4b1387aa1847dc4c75d709
Comment 4 illumilore 2014-12-06 00:31:02 UTC
Will the delete button also start working on that commit?
Comment 5 Eike Hein 2014-12-06 00:33:09 UTC
No, the two are unrelated (support for the Delete button was added recently as well, however).